here's what i downloaded
i only did some minor reformatting of the HTML. no visible changes. also added jquery file

--- a/story4.html
+++ b/story4.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Travel Machine - Japan</title>
+        <title>Paris</title>
         <!-- fonts -->
         <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Caveat&display=swap" rel="stylesheet">
@@ -24,41 +24,47 @@
         <div id = "footer">
             <p>Created By Ray Jin, JiaCheng Li, Blair Niu, XiongSen Xia</p>
         </div>
-        <div id = "story">
+       <!-- Story 4: Akmalov  -->
+       <div id = "story1">
             <div class = "image1">
                 <div class = image11>
-                    <img src = "images/image1.1.JPG" alt = "image1">
+                    <img src = "images/image41.JPG" alt = "image1">
                 </div>
                 <div class= "image12">
-                    <img src = "images/image1.2.JPG" alt = "image1">
+                    <img src = "images/image42.JPG" alt = "image1">
                 </div>
             </div>
             <div id = "word1">
-                <p>"Rain, Breathtaking, Struggle"</p>
-                <p>&nbsp-Ryan Livesay said his trip to Japan</p>
-                <p>was his most memorable one yet.</p>
+                    <p>"But it was fun"</p>
+                    <p>&nbsp-Farmon Akmalov said his trip to Paris</p>
+                    <p>was his most memorable one yet.</p>
             </div>
             <div id = "story1p">
-                <h2>HONSHU, JAPAN</h2>
-                <p>Ryan climbed Mt. Fuji in Honshu, Japan, with his family during the summer. It was raining at the time, but he said it was a unique experience. </p>
-
-                <p> “So we got to the top [and] we couldn't see the crater, but then once [we started] going down, it completely cleared up and it was like gorgeous,” he said. </p>
-
-                <p> He added that “some nice dude” at the top of the mountain gave him and his family some hot chocolate. </p>
-
+                <h2>PARIS</h2>
+                <p>Akmalov, an exchange student from Latvia, got caught in the rain 
+                    while waiting in line for the Musée du Louvre. “When I went [to 
+                    Paris], it was autumn,” he said. “I [saw] the rain in warm weather 
+                    and it was really nice going in the city and seeing beautiful places." 
+                    Akmalov said an unforgettable thing was his Nike shoes getting soaked 
+                    by the rain. “Maybe it's not a pleasant memory, but it was fun,” he 
+                    said. 
+                </p>   
             </div>
+
             <div id = "storyd1">
-                <h2>HONSHU, JAPAN</h2>
-                <p>Japan consists of four main islands with numerous small ones. According to World Atlas, it is located in Asia’s east coast on the Pacific Ocean. It’s also known as “The land of the rising sun.” The capital city is Tokyo, which is also the most popular city for traveling and shopping. Japan has a temperate climate, but still vary from different regions. For example, Hokkaido can be extremely cold compared to other cities. The famous cherry blossoms is usually around March. Mount Fuji is the most famous and highest mountain in Japan and it is an active volcano. </p>
+                    <h2>PARIS</h2>
+ 
+                <p>Paris, the capital of France, situated in the north-central part of the country. For centuries, it has been known as one of the world’s most charming cities and attracts both artists and tourists. The Louvre, the Arc de Triomphe, Eiffel Tower and many museums attract millions of people every year. Paris is a city full of fantastic food and has a fairly temperate climate, make it a good place for traveling.<p>
+
             </div>
             <div class = "buttons">
                     <button class = "description">
-                        Read More about Japan
+                        Read More About Paris
                     </button>
-                    <button class = "submit" onclick="location.href = 'index.html';">
+                    <button class = "submit"  onclick="location.href = 'index.html';">
                         Reselect Your Journey
                     </button>
-            </div>
+                </div>
         </div>
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
         <script src="individual.js"></script>
